--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,10 @@ repository = "https://github.com/shenwei356/fastx"
 readme = "README.md"
 
 [dependencies]
-buffer-redux = "1.1.0"
-bzip2 = "0.6.1"
-flate2 = "1.1.5"
-memchr = "2.7.6"
-xz2 = "0.1.7"
-zstd = "0.13.3"
+buffer-redux = "1"
+bzip2 = "0.6"
+flate2 = "1"
+liblzma = "0.3"
+memchr = "2"
+thiserror = "2.0.17"
+zstd = "0.13"
